started user route

--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -6,7 +6,9 @@
   "password": "",
   "database": "tweeter",
   "migrations": ["./src/database/migrations/**.ts"],
+  "entities": ["./src/models/**.ts"],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/database/migrations",
+    "entitiesDir": "./src/models"
   }
 }
