--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "server": "nodemon src/server.ts",
     "start": "ts-node src/index.ts"
@@ -14,11 +14,13 @@
     "mysql": "^2.14.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.10",
-    "typeorm": "0.2.33"
+    "typeorm": "0.2.33",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^8.0.29",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node-dev": "^1.1.6",
     "typescript": "3.3.3333"
