--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "server": "nodemon src/server.ts",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -19,9 +20,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "@types/node": "^8.0.29",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
+    "jest": "^27.0.4",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "3.3.3333"
   }
