--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-sticky-box": "^0.9.3",
+    "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.34.0",
     "typescript": "^4.1.2",
