--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
+    "date-fns": "^2.22.1",
     "express": "^4.17.1",
     "mysql": "^2.14.1",
     "pg": "^8.6.0",
